Moved theme changer icon to top menu bar on mobile, increased font size on mobile bottom fixed menu; added popover to network icon

--- a/src/components/RosePriceButton.module.scss
+++ b/src/components/RosePriceButton.module.scss
@@ -3,6 +3,6 @@
 .addToken {
   font-size: 16px;
   @include breakpoint(sm) {
-    font-size: 12px !important;
+    font-size: 13px !important;
   }
 }
