--- a/src/components/TopMenu.scss
+++ b/src/components/TopMenu.scss
@@ -76,6 +76,11 @@ header.top {
     justify-content: flex-end;
     width: 45%;
     margin-left: auto;
+    & > :nth-child(3) {
+      @include breakpoint(lg) {
+        display: none;
+      }
+    }
     @include breakpoint(lg) {
       justify-content: space-evenly;
       border-top-left-radius: 15px;
